# Beat-Saber-Airbuds-Search-Kakasi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_DEV.md  extern.cmake  mod.template.json  qpm.json  qpm.shared.json
cmake/: strip.cmake
cmake/targets/: android-ndk.cmake
include/: JapaneseConverter.hpp  Log.hpp  ModConfig.hpp  _config.hpp
scripts/: createqmod.ps1
src/: KakasiConverter.cpp  ModConfig.cpp  main.cpp
